Fix uniform spacing in goal

--- a/components/goal/index.css
+++ b/components/goal/index.css
@@ -38,6 +38,22 @@
   padding-top: calc((((100% - var(--gutter, 0px)) / 2) * 3) + var(--gutter, 0px) * 2); /* 3 */
 }
 
+/**
+ * Achieve equivalent of 8% square width
+ */
+
+.Goal--square .Goal-container {
+  --space: 8%;
+}
+
+.Goal--landscape .Goal-container {
+  --space: calc(((100% - var(--gutter, 0px) * 2) / 3) * 0.08);
+}
+
+.Goal--portrait .Goal-container {
+  --space: calc(((100% - var(--gutter, 0px)) / 2) * 0.08);
+}
+
 .Goal::after {
   content: "";
   width: 100%;
@@ -103,18 +119,7 @@
   flex-direction: column;
   align-items: stretch;
   justify-content: space-between;
-}
-
-.Goal--square .Goal-container {
-  padding: 8%;
-}
-
-.Goal--landscape .Goal-container {
-  padding: calc(((100% - var(--gutter, 0px) * 2) / 3) * 0.08);
-}
-
-.Goal--portrait .Goal-container {
-  padding: calc(((100% - var(--gutter, 0px)) / 2) * 0.08);
+  padding: var(--space);
 }
 
 /**
@@ -133,22 +138,18 @@
   width: 0;
   height: 0;
   padding-top: 100%;
-  /* padding-top: 92%; */
 }
 
 .Goal--square .Goal-cell {
   width: 100%;
-  /* padding-top: 8%; */
 }
 
 .Goal--landscape .Goal-cell {
   width: calc((100% - var(--gutter, 0px) * 2) / 3);
-  /* padding-top: calc(((100% - var(--gutter, 0px) * 2) / 3) * 0.08); */
 }
 
 .Goal--portrait .Goal-cell {
   width: calc((100% - var(--gutter, 0px)) / 2);
-  /* padding-top: calc(((100% - var(--gutter, 0px)) / 2) * 0.08); */
 }
 
 /**
@@ -212,21 +213,38 @@
  */
 
 .Goal-content {
+  display: flex;
+  align-items: flex-start;
+}
 
+.Goal--portrait .Goal-content {
+  flex-direction: column;
 }
 
 .Goal--landscape .Goal-content {
-  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
 }
 
-.Goal-description {
-  flex: 1 1 auto;
+.Goal--portrait .Goal-description {
+  max-width: 19em;
+}
+
+.Goal--landscape .Goal-description {
+  max-width: 24em;
+}
+
+@media (min-width: 1200px) {
+  .Goal-description {
+    font-size: 1.2rem;
+  }
 }
 
 .Goal-button {
   display: inline-block;
   padding: 1rem;
-  color: var(--current-background);
+  margin-top: var(--space);
+  color: transparent;
   font-size: 1.2rem;
   font-family: var(--heading-font-family);
   line-height: var(--heading-line-height);
@@ -235,4 +253,23 @@
   text-transform: uppercase;
   white-space: nowrap;
   background: #fff;
+  text-shadow: 0 0 var(--current-background);
 }
+
+.Goal--1:hover .Goal-button { color: rgba(var(--color-goal-1-shaded), 0.13); }
+.Goal--2:hover .Goal-button { color: rgba(var(--color-goal-2-shaded), 0.13); }
+.Goal--3:hover .Goal-button { color: rgba(var(--color-goal-3-shaded), 0.13); }
+.Goal--4:hover .Goal-button { color: rgba(var(--color-goal-4-shaded), 0.13); }
+.Goal--5:hover .Goal-button { color: rgba(var(--color-goal-5-shaded), 0.13); }
+.Goal--6:hover .Goal-button { color: rgba(var(--color-goal-6-shaded), 0.13); }
+.Goal--7:hover .Goal-button { color: rgba(var(--color-goal-7-shaded), 0.13); }
+.Goal--8:hover .Goal-button { color: rgba(var(--color-goal-8-shaded), 0.13); }
+.Goal--9:hover .Goal-button { color: rgba(var(--color-goal-9-shaded), 0.13); }
+.Goal--10:hover .Goal-button { color: rgba(var(--color-goal-10-shaded), 0.13); }
+.Goal--11:hover .Goal-button { color: rgba(var(--color-goal-11-shaded), 0.13); }
+.Goal--12:hover .Goal-button { color: rgba(var(--color-goal-12-shaded), 0.13); }
+.Goal--13:hover .Goal-button { color: rgba(var(--color-goal-13-shaded), 0.13); }
+.Goal--14:hover .Goal-button { color: rgba(var(--color-goal-14-shaded), 0.13); }
+.Goal--15:hover .Goal-button { color: rgba(var(--color-goal-15-shaded), 0.13); }
+.Goal--16:hover .Goal-button { color: rgba(var(--color-goal-16-shaded), 0.13); }
+.Goal--17:hover .Goal-button { color: rgba(var(--color-goal-17-shaded), 0.13); }
